@@ -160,11 +160,16 @@ void GCGcolpoolEndFarkas(
 /** prices cols of the col pool */
 GCG_EXPORT
 SCIP_RETCODE GCGcolpoolPrice(
-   SCIP*                 scip,               /**< SCIP data structure */
    GCG_COLPOOL*          colpool,            /**< col pool */
    GCG_PRICESTORE*       pricestore,         /**< GCG price storage */
    SCIP_SOL*             sol,                /**< solution to be separated (or NULL for LP-solution) */
    SCIP_Bool*            foundvars           /**< pointer to store the result of the separation call */
+   );
+
+/** removes cols that violate global bounds */
+GCG_EXPORT
+SCIP_RETCODE GCGcolpoolPropagateGlobalBounds(
+   GCG_COLPOOL*          colpool             /**< col pool */
    );
 
 /** @} */
