@@ -5,6 +5,15 @@
 Bug fixes
 ---------
 
+- fix (global) bound propagation bugs
+- remove columns from colpool that violate global bounds
+
+New/modified/removed API functions:
+---------------------------
+
+- added function 'GCGgetColpool'
+- added function 'GCGcolpoolPropagateGlobalBounds'
+
 
 @section RN360 GCG 3.6.0
 *************************
